# server/api/controllers/notes/router.ts
@@ -2,4 +2,4 @@ import express from 'express';
 import controller from './controller';
 export default express
   .Router()
-  .get('/', controller.all)
+  .post('/', controller.create)
