# server/common/swagger/swagger.json
@@ -85,6 +85,31 @@
             }
           }
         }
+      },
+      "/notes": {
+        "post": {
+          "tags": [
+            "Notes"
+          ],
+          "description": "Create a new note",
+          "requestBody": {
+            "description": "Create a note",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/NoteBody"
+                }
+              }
+            },
+            "required": true
+          },
+          "responses": {
+            "200": {
+              "description": "Returns all notes",
+              "content": {}
+            }
+          }
+        }
       }
     },
     "components": {
@@ -99,6 +124,23 @@
             "name": {
               "type": "string",
               "example": "no_stress"
+            }
+          }
+        },
+        "NoteBody": {
+          "title": "note",
+          "required": [
+            "name","description"
+          ],
+          "type": "object",
+          "properties": {
+            "name": {
+              "type": "string",
+              "example": "express"
+            },
+            "description": {
+              "type": "string",
+              "example": "no stress"
             }
           }
         }
